# instrument-checkrider

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/smitty/faa_loader/: load.py  use.py  util.py
src/smitty/faa_loader/data/: __init__.py  sources.csv
tests/: test_loader.py
